# codelite

./: CMakeLists.txt  LiteEditor.workspace
LiteEditor/: LiteEditor.project
LuaScript/: CMakeLists.txt  LuaScript.project  codelite.lua  lua_bindings.h  lua_cl_bindings.h  lua_codelite.cpp  lua_event_handler.cpp  lua_event_handler.h  lua_events.cpp  lua_ieditor.cpp  lua_ieditor.h  lua_imanager.cpp  lua_imanager.h  lua_project.cpp  lua_project.h  lua_runner.cpp  lua_runner.h  lua_utils.cpp  lua_utils.hpp  lua_workspace.cpp  lua_workspace.h  script_event_handler.cpp  script_event_handler.h  script_frame.cpp  script_frame.h  script_manager.cpp  script_manager.h  script_panel.cpp  script_panel.h  script_plugin.cpp  script_plugin.h  script_settings_dlg.cpp  script_settings_dlg.h  script_settings_frame.cpp  script_settings_frame.h  wxcrafter.wxcp  wxcrafter_lua_script.cpp  wxcrafter_lua_script.h  wxcrafter_lua_script_bitmaps.cpp  wxcrafter_lua_script_bitmaps.xrc
LuaScript/resources/: codelite.lua  script_gear_16.xpm  script_gear_24.xpm  script_lightning_16.xpm  script_lightning_24.xpm
LuaScript/samples/: cl_events.lua  comment_selection.lua  trim.lua
LuaScript/tests/: tests.lua
sdk/lua/: lua.bat  lua.project
